<?xml version="1.0"?>
<package format="3">
  <name>dbow2_vendor</name>
  <version>0.1.0</version>
  <description>Vendor wrapper package that builds an in-tree DBoW2 source snapshot for downstream ROS 2 SLAM packages.</description>

  <maintainer email="maintainer@example.com">dbow2_vendor maintainer</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- DBoW2 depends on OpenCV -->
  <build_depend>opencv</build_depend>
  <exec_depend>opencv</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
